# belr

./: .gitlab-ci.yml  CMakeLists.txt  Makefile.am  README.md  configure.ac
cmake/: BelrConfig.cmake.in
include/belr/: belr.h  belr.hh  parser.h
src/: CMakeLists.txt  Profiler.h  belr.cc  belr.cpp  grammarbuilder.cpp
tester/: CMakeLists.txt  Makefile.am  belr-basicgrammar-tester.cpp  belr-charrange-tester.cpp  belr-charrecognizer-tester.cpp  belr-exclusiveselector-tester.cpp  belr-literal-tester.cpp  belr-loop-tester.cpp  belr-recognizerpointer-tester.cpp  belr-selector-tester.cpp  belr-sequence-tester.cpp  belr-sipgrammar-tester.cpp  belr-tester.cpp  belr-tester.hpp  belr-vcardgrammar-tester.cpp  grammar-tester.cpp  parser.cpp
tools/: BasicGrammar-test.cc  CMakeLists.txt  CharRange-test.cc  CharRangeVectorized-test.cc  CharRecognizer-test.cc  CharRecognizerStringed-test.cc  CharRecognizerVectorized-test.cc  CharRecognizerVeryStringed-test.cc  ExclusiveSelector-test.cc  ExclusiveSelectorVectorized-test.cc  GrammarDump-test.cc  GrammarDumpParse-test.cc  Literal-test.cc  LiteralVectorized-test.cc  Loop-test.cc  LoopVectorized-test.cc  Profiler.mm  RecognizerPointer-test.cc  RecognizerPointerVectorized-test.cc  Selector-test.cc  SelectorVectorized-test.cc  Sequence-test.cc  SequenceVectorized-test.cc  belr-dump.cc  belr-parse.cc  exploreGrammar.cc  vcardsample.txt
